samples/_failures_safe/1761413893_eb55f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04273004.c: In function ‘main’:
./samples/SAFE/__tmp_04273004.c:160:28: error: missing terminating " character
  160 |                     printf("Matrix addition failed: dimension mismatch or integer
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_04273004.c:160:21: error: expected expression at end of input
  160 |                     printf("Matrix addition failed: dimension mismatch or integer
      |                     ^~~~~~
./samples/SAFE/__tmp_04273004.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04273004.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04273004.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04273004.c:160:21: error: expected declaration or statement at end of input
